Extraction description newMAl

--- a/1_Src/1_DescriptionCrawler/descriptionCrawler.ipynb
+++ b/1_Src/1_DescriptionCrawler/descriptionCrawler.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,9 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "⚡ Start - 2024-07-20 20:03:06.063542 ⚡\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"⚡ Start - {} ⚡\\n\".format(datetime.datetime.now()))\n",
     "startTime = datetime.datetime.now()"
@@ -51,11 +60,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- #️⃣ Apps: 15342 \n"
+     ]
+    }
+   ],
    "source": [
-    "DATA_PATH = \"../../0_Data/3_MalCatSet.csv\"\n",
+    "DATA_PATH = \"../../0_Data/5_NewMal.csv\"\n",
     "\n",
     "# Read the data\n",
     "appsDF = pd.read_csv(DATA_PATH)\n",
@@ -68,9 +85,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sha256</th>\n",
+       "      <th>pkg_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00023BCFC14CE3027A542987394A97C64B6C1B9304090F...</td>\n",
+       "      <td>com.kuyhaa.android.auto.call.recorder.acr.lite...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>000447D7EBEC825293D013A4DB671AFBDB01618D46AE57...</td>\n",
+       "      <td>com.greenncardd.senegalgospelmusic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>00044AE8A85BC29EA36DB54F444D888E56425B0EC6CF0F...</td>\n",
+       "      <td>wiki.no.mans.sky.game</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>000A79E4F57F2ADE51E09A1B094E9D8D08CC7B915A2AAD...</td>\n",
+       "      <td>com.app.app0e87ec29c687</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>000CFA175969C036D6D3479D3DD204D4CAFA816AACE793...</td>\n",
+       "      <td>com.gamelord.tractor.simulator.free</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              sha256  \\\n",
+       "0  00023BCFC14CE3027A542987394A97C64B6C1B9304090F...   \n",
+       "1  000447D7EBEC825293D013A4DB671AFBDB01618D46AE57...   \n",
+       "2  00044AE8A85BC29EA36DB54F444D888E56425B0EC6CF0F...   \n",
+       "3  000A79E4F57F2ADE51E09A1B094E9D8D08CC7B915A2AAD...   \n",
+       "4  000CFA175969C036D6D3479D3DD204D4CAFA816AACE793...   \n",
+       "\n",
+       "                                            pkg_name  \n",
+       "0  com.kuyhaa.android.auto.call.recorder.acr.lite...  \n",
+       "1                 com.greenncardd.senegalgospelmusic  \n",
+       "2                              wiki.no.mans.sky.game  \n",
+       "3                            com.app.app0e87ec29c687  \n",
+       "4                com.gamelord.tractor.simulator.free  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "appsDF.head(5)"
    ]
@@ -215,7 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "appsDF.to_csv(\"../TmpData/3_MalCatSet_Description.csv\", index=False)"
+    "appsDF.to_csv(\"../TmpData/5_NewMal_Description.csv\", index=False)"
    ]
   },
   {
@@ -258,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
