UPDATE Descirpiton mudflow + label NewMal

--- a/1_Src/1_DescriptionCrawler/descriptionCrawler.ipynb
+++ b/1_Src/1_DescriptionCrawler/descriptionCrawler.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,14 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "⚡ Start - 2024-07-20 20:03:06.063542 ⚡\n",
+      "⚡ Start - 2024-07-20 21:53:41.631606 ⚡\n",
       "\n"
      ]
     }
@@ -60,32 +60,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- #️⃣ Apps: 15342 \n"
+      "--- #️⃣ Apps: 8038 \n"
      ]
     }
    ],
    "source": [
-    "DATA_PATH = \"../../0_Data/5_NewMal.csv\"\n",
+    "DATA_PATH = \"../../0_Data/4_MudFlow.csv\"\n",
     "\n",
     "# Read the data\n",
     "appsDF = pd.read_csv(DATA_PATH)\n",
+    "appsDF = appsDF.drop(columns=['classID'])\n",
     "\n",
     "# TEST\n",
-    "#appsDF = appsDF.head(50)\n",
+    "#appsDF = appsDF.head(10)\n",
     "\n",
     "print(\"--- #️⃣ Apps: {} \".format(appsDF.shape[0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -110,34 +111,34 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>sha256</th>\n",
-       "      <th>pkg_name</th>\n",
+       "      <th>pkgName</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>00023BCFC14CE3027A542987394A97C64B6C1B9304090F...</td>\n",
-       "      <td>com.kuyhaa.android.auto.call.recorder.acr.lite...</td>\n",
+       "      <td>093EBD1938A3FD17C91FBB34AED59E53F927EDBCE36865...</td>\n",
+       "      <td>com.zoner.android.security</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>000447D7EBEC825293D013A4DB671AFBDB01618D46AE57...</td>\n",
-       "      <td>com.greenncardd.senegalgospelmusic</td>\n",
+       "      <td>B0842156E992486357E98E029BA9126D9C6312C658DBC7...</td>\n",
+       "      <td>com.grgbanking.card</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>00044AE8A85BC29EA36DB54F444D888E56425B0EC6CF0F...</td>\n",
-       "      <td>wiki.no.mans.sky.game</td>\n",
+       "      <td>CFC732676EA8FCC9C3CBF8AEA806BEFB4E6F00D8ECE10C...</td>\n",
+       "      <td>com.markeu.msscan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>000A79E4F57F2ADE51E09A1B094E9D8D08CC7B915A2AAD...</td>\n",
-       "      <td>com.app.app0e87ec29c687</td>\n",
+       "      <td>2669B8183B767C0F766A62C5E39E8414BEFBAA628BD120...</td>\n",
+       "      <td>com.markeu.msscan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>000CFA175969C036D6D3479D3DD204D4CAFA816AACE793...</td>\n",
-       "      <td>com.gamelord.tractor.simulator.free</td>\n",
+       "      <td>72385FB655F1E15CC9B2C21A5D832CB19C347BE34FC2E6...</td>\n",
+       "      <td>cn.menue.barcodescanner</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -145,21 +146,21 @@
       ],
       "text/plain": [
        "                                              sha256  \\\n",
-       "0  00023BCFC14CE3027A542987394A97C64B6C1B9304090F...   \n",
-       "1  000447D7EBEC825293D013A4DB671AFBDB01618D46AE57...   \n",
-       "2  00044AE8A85BC29EA36DB54F444D888E56425B0EC6CF0F...   \n",
-       "3  000A79E4F57F2ADE51E09A1B094E9D8D08CC7B915A2AAD...   \n",
-       "4  000CFA175969C036D6D3479D3DD204D4CAFA816AACE793...   \n",
+       "0  093EBD1938A3FD17C91FBB34AED59E53F927EDBCE36865...   \n",
+       "1  B0842156E992486357E98E029BA9126D9C6312C658DBC7...   \n",
+       "2  CFC732676EA8FCC9C3CBF8AEA806BEFB4E6F00D8ECE10C...   \n",
+       "3  2669B8183B767C0F766A62C5E39E8414BEFBAA628BD120...   \n",
+       "4  72385FB655F1E15CC9B2C21A5D832CB19C347BE34FC2E6...   \n",
        "\n",
-       "                                            pkg_name  \n",
-       "0  com.kuyhaa.android.auto.call.recorder.acr.lite...  \n",
-       "1                 com.greenncardd.senegalgospelmusic  \n",
-       "2                              wiki.no.mans.sky.game  \n",
-       "3                            com.app.app0e87ec29c687  \n",
-       "4                com.gamelord.tractor.simulator.free  "
+       "                      pkgName  \n",
+       "0  com.zoner.android.security  \n",
+       "1         com.grgbanking.card  \n",
+       "2           com.markeu.msscan  \n",
+       "3           com.markeu.msscan  \n",
+       "4     cn.menue.barcodescanner  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +296,7 @@
     "appsDF['googlePlayDescription'] = appsDF['gpDescription']\n",
     "print(\"--- #️⃣ Apps: {} \".format(appsDF.shape[0]))\n",
     "\n",
-    "appsDF = appsDF.dropna(subset=['description'])\n",
+    "appsDF = appsDF.dropna(subset=['googlePlayDescription'])\n",
     "print(\"--- #️⃣ Apps: {} \".format(appsDF.shape[0]))\n",
     "\n",
     "appsDF = appsDF.drop(columns=['gpDescription'])\n",
@@ -308,7 +309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "appsDF.to_csv(\"../TmpData/5_NewMal_Description.csv\", index=False)"
+    "appsDF.to_csv(\"../TmpData/4_MudFlow_Description.csv\", index=False)"
    ]
   },
   {
